# tdeflasher

./: CMakeLists.txt  README.md  create_deb.sh
core/: CMakeLists.txt  blockwriter.cpp  blockwriter.h  diskscanner.cpp  diskscanner.h  flasher.cpp  flasher.h  imagereader.cpp  imagereader.h  verifier.cpp  verifier.h
gui/: CMakeLists.txt  help_icon.c  icons_data.h  main.cpp  mainwindow.cpp  mainwindow.h  urlinputdialog.cpp  urlinputdialog.h
